conformance/tests/httproute-session-persistence-cookie.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: session-persistence-cookie
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /session-persistence
    sessionPersistence:
      type: Cookie
    backendRefs:
    - name: infra-backend-v1
      port: 8080
